--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,6 +59,12 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      
+      .btn {
+        .btn-create();        
+      }
     }
+    
+    
   }
 }// home
