--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,14 @@
 // Mixins in here
+
+.btn-create() {
+
+    background-color: @eastern-blue;
+    color: white;
+    font-size: 2rem;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 10px;
+    width: 100%;
+    height: 40px;
+
+}
