--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,10 @@
 
   .header-image {    
     border-top: 2px dashed @navigation-border;
+    @media @mobile {
+      max-width: 86%;         
+      margin-left: 8%;   
+    }
   } 
 
   .content-section {    
@@ -9,16 +13,32 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media @mobile {
+      flex-direction: column;   
+      padding-left: 8%;             
+    }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 90%;   
+        padding-left: 1.5%;                
+      }
+
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 100%;   
+        padding-left: 1%;            
+      }
 
       img {
         border-radius: 10px;
@@ -30,9 +50,19 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile {
+      display: flex;
+      flex-direction: column-reverse;    
+      padding-left: 8%;               
+    }
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {      
+        padding-left: .5%;                  
+      }
     }
 
     .img-content {
@@ -45,9 +75,15 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    @media @mobile {      
+      width: 86%;                  
+    }
+    
+
     img {
       border-radius: 10px;
     }
+    
   }
 
   .content-pick {
@@ -56,12 +92,21 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {      
+      flex-direction: column;       
+      padding-left: 13%;           
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {      
+        width: 85%;                  
+      }
       
-      .btn {
-        .btn-create();        
+      .btn {        
+        .btn-create(@eastern-blue,@white);    
       }
     }
     
