--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 @main-bg:  @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
-@mobile: ~"(min-width: 500px)";
+@mobile: ~"(max-width: 500px)";
 
 // Colors
 @white: #FFFFFF;
