--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,14 +1,20 @@
 // Mixins in here
 
-.btn-create() {
+.btn-create(@bgClr,@color) {
 
-    background-color: @eastern-blue;
-    color: white;
+    background-color: @bgClr;
+    color: @color;
     font-size: 2rem;
     border-radius: 10px;
     text-align: center;
-    padding-top: 10px;
-    width: 100%;
+    padding-top: 4%;
+    width: 85%;
     height: 40px;
+
+    @media @mobile {      
+        width: 100%;  
+        padding-top: 3%;                
+    }
+      
 
 }
