--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,14 +6,35 @@ header {
     margin-top: 4%;
     margin-bottom: 4%;
     
-    nav {      
-
+    @media @mobile {
+         flex-direction: column;
+         text-align: center;
+         width: 96%;
+    }
+    
+    nav {  
+        
+        @media @mobile {
+            display: flex;
+            justify-content: space-between; 
+            width: 96%;  
+            padding-left: 10%;
+            margin: 3%  0;                
+        }
+       
+        
         a {
             padding: 20px;
             text-decoration: none;  
             font-size: 1.8rem;
             color: @shark;
+
+            @media @mobile {
+                padding: 1%;         
+            }
         }
+
+        
     }
 
    }
