--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,11 +6,17 @@ header {
     margin-top: 4%;
     margin-bottom: 4%;
     
+    .pg-title {
+       .text-animation(0px,280px);
+    }
+
+    
     @media @mobile {
          flex-direction: column;
          text-align: center;
          width: 96%;
     }
+
     
     nav {  
         
@@ -39,3 +45,4 @@ header {
 
    }
 
+   
